@@ -1,4 +1,6 @@
 DIST glpk-4.22.tar.gz 1417730 RMD160 ea14612df4140f85b8cfd74a6926f9e0019d230e SHA1 77ab64d9a1e81d3048e1c8035680a2247ddc4f66 SHA256 4270f8e0f00ddbb02a0eb56255719cf6d1615c411b2641cdd3ca7965a7d0292b
+DIST glpk-4.24.tar.gz 1449575 RMD160 8cacd508915e5e02422b369dc0f5ae778d20876e SHA1 e2c6d7f72a43d92cff0374003184e5e04f1fde6f SHA256 23326c9dd21762159b6fa946e41e0e95d233c6e9f9a69134ef10e3541cd516c9
 EBUILD glpk-4.22.ebuild 1149 RMD160 0dd5dd4c851db849a038993126e1358d7da665b4 SHA1 3bcc86724b6f0f565c9d6c5923a52cbb0045b635 SHA256 cc2832b330c032579292f6cf8f8086e556b12be30b582c5422d0678f751d35d4
-MISC ChangeLog 2887 RMD160 630f79209d460509b8451e881fd229eaffc0fd39 SHA1 1720fd87fdbea4b0e0be25fdb8a4280686db3061 SHA256 ecf76f8689d05dab53387502903aa5d1a956ca75697f350b9391a7001808348c
+EBUILD glpk-4.24.ebuild 1149 RMD160 3dd84c69662f4ceb827f32e4a4d097894761f2bc SHA1 12b64bd13ebe0c6b9656e700ad46855e097a6d45 SHA256 773b31fc3e3020b320b2ac2510c088ee141fb9b66e354a0a617568c732c47c8c
+MISC ChangeLog 3003 RMD160 4994faca86fe4f23c889d1c2f5cc681607068ec4 SHA1 61ca0699d4854f8ab18dfbfa7cd68263fd9ad94e SHA256 14c3ccab405a6f1832dfe98d97d84fe9c53ce25555b30b125130efc6229b3dbd
 MISC metadata.xml 231 RMD160 8f84973eaebda75204435889dbc7c24625066f2e SHA1 0f7b69677f55597d4ff59b31dabed5a543875ef0 SHA256 f84a829a9b8fcf07a58c2f5d493c7263c6d79a113de6c73766203a3aba0324df
